<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_won"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.WonFragment">

    <ImageView
        android:id="@+id/iv_trophy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_trophy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txt_congrats"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_trophy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_trophy" />

    <TextView
        android:id="@+id/tv_sub_won"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/txt_sub_won"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_congrats"
        app:layout_constraintStart_toStartOf="@+id/tv_congrats"
        app:layout_constraintTop_toBottomOf="@+id/tv_congrats" />

    <Button
        android:id="@+id/btn_won"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape_round"
        android:text="@string/txt_got_it"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_sub_won"
        app:layout_constraintStart_toStartOf="@+id/tv_sub_won"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_won" />
</androidx.constraintlayout.widget.ConstraintLayout>