<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_won"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.OverFragment">

    <ImageView
        android:id="@+id/iv_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:src="@drawable/ic_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sorry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txt_oh_no_sorry"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_over"
        app:layout_constraintStart_toStartOf="@+id/iv_over"
        app:layout_constraintTop_toBottomOf="@+id/iv_over" />

    <TextView
        android:id="@+id/tv_sub_over"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/txt_next_time_you_must_be_lucky"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_sorry"
        app:layout_constraintStart_toStartOf="@+id/tv_sorry"
        app:layout_constraintTop_toBottomOf="@+id/tv_sorry" />

    <Button
        android:id="@+id/btn_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_shape_round"
        android:text="@string/txt_go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_sub_over"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="@+id/tv_sub_over"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_over"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>